修改动态功能栏bug